$Id$

MIDIboxFM V1.4j
~~~~~~~~~~~~~~~

   o support for 8bit LCD access mode (e.g. for Newhaven OLEDs)


MIDIboxFM V1.4i
~~~~~~~~~~~~~~~

   o Wavetable step #16..31 now stored/restored as intended


MIDIboxFM V1.4h
~~~~~~~~~~~~~~~

   o Wavetables can now be changed via SysEx when they are stored in RAM


MIDIboxFM V1.4g
~~~~~~~~~~~~~~~

   o fixed SysEx import issue with OP Algorithm

   o added presets/bank2/funkybank-v1.syx to the release package.
     This bank contains 128 awesome patches which have been created by Martin aka. mburch


MIDIboxFM V1.4f
~~~~~~~~~~~~~~~

   o display updated when the patch name has been changed from external


MIDIboxFM V1.4e
~~~~~~~~~~~~~~~

   o all drumsets are selectable again (previously only A1..A5)

   o presets/midibox_fm_drumsets.syx has been overworked, it now
     contains 16 *different* drumsets

   o changed encoder mode to MIOS_ENC_MODE_DETENTED3
     since it's compatible with most encoders


MIDIboxFM V1.4d
~~~~~~~~~~~~~~~

   o sammichFM option: encoder scrolls menu page, up/down button
     select drum patch


MIDIboxFM V1.4c
~~~~~~~~~~~~~~~

   o changed way how percussions are handled to ensure that no trigger
     is lost on "short notes"


MIDIboxFM V1.4b
~~~~~~~~~~~~~~~

   o OPL3 register accesses improved for sammichFM


MIDIboxFM V1.4a
~~~~~~~~~~~~~~~

   o bugfix for Instrument->AOUT assignments


MIDIboxFM V1.4
~~~~~~~~~~~~~~

   o PIC18F4685 only: CC assignment changes for Velocity/Aftertouch/Modwheel/WT
     are now non-destructive (shadow buffers are used for all parameters)

   o PIC18F4685 only: CC assignment names are now print on screen

   o changed velocity/modwheel/aftertouch depth parameter resolution to allow
     1:1 modulation of 4bit OP parameters.
     E.g. Depth=15, Init=0 will control the parameter from 0,,15 in positive direction,
     and Depth=-15, Init=15 from 15..0 in negative direction
     7bit parameters can't be modulated in full range anymore, but this is